# rest_api

./: .gitignore  CMakeLists.txt  README  api.cpp  client.py  data.txt  mr_robot.py  write.cpp
data/: history.json  liked_posts.json  likes.json  loged_in.json  logs.json  logs.txt  posts.json  subs.json  user_messages.json  users.json  videos.json
install/: instal.sh
src/: ai_api.py  api.cpp  client.py  off.py  r.py  test_request.py  videos.py
tests/: vd.py
